# clix

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conanfile.py  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  vcpkg-upstream.yml
benchmarks/: CMakeLists.txt  benchmark_main.cpp
cmake/: clixConfig.cmake.in
docs/: README.md  architecture.md  benchmarks.md  platforms.md  project-layout.md  router.md
examples/: CMakeLists.txt  README.md
examples/calculator/: README.md  main.cpp
examples/file_editor/: README.md  file_service.cpp  file_service.hpp  main.cpp
examples/hello/: README.md  main.cpp
examples/random_number/: README.md  main.cpp
ports/clix/: portfile.cmake
scripts/: update_vcpkg_port.py
src/: clix.hpp
src/clix/: cli.hpp  clix.hpp  command.hpp  completion.hpp  config.hpp  exceptions.hpp  parser.hpp  platform.hpp  router.hpp  validators.hpp  values.hpp
src/clix/command/: constants.hpp  index.hpp  types.hpp
src/clix/detail/: strings.hpp
src/clix/exceptions/: index.hpp
src/clix/exceptions/command_error/: index.hpp  types.hpp
src/clix/exceptions/parsing_error/: index.hpp
src/clix/exceptions/parsing_error/utils/: calc_type.hpp  format.hpp  is_valid_number_string.hpp  resolve_hint.hpp
src/clix/parser/: index.hpp
src/clix/parser/normalize_arguments/: index.hpp
src/clix/parser/token/: constants.hpp  index.hpp  types.hpp
src/clix/parser/value/: constants.hpp  index.hpp  types.hpp
src/clix/parser/value/utils/: parse_boolean.hpp  parse_choice.hpp  parse_json.hpp  parse_list.hpp  parse_number.hpp
src/clix/values/: index.hpp  path.hpp  size.hpp  time.hpp  url.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test_package.cpp
tests/: CMakeLists.txt  platform_smoke.cpp  test_main.cpp
vcpkg/ports/clix/: portfile.cmake  vcpkg.json
